Increased PermGenSpace for testsummary task to make it actually able to run successfully to completion on my machine.
git-svn-id: https://src.springframework.org/svn/spring-maintenance/trunk@10840 fd5a2b45-1f63-4059-99e9-3c7cb7fd75c8