@@ -1005,6 +1005,7 @@
 		<junit forkmode="${test.fork.mode}" printsummary="yes" haltonfailure="no" haltonerror="no">
 
 			<jvmarg line="-Djava.awt.headless=true"/>
+			<jvmarg line="-XX:MaxPermSize=96m"/>
 
 			<!-- Must go first to ensure any jndi.properties files etc take precedence  -->
 			<classpath location="${target.tigertestclasses.dir}"/>
